Добавлен метод получения температуры по всем датчикам
